@@ -1,3 +1,8 @@
+2000-08-07  Robin * Slomkowski  <rslomkow@eazel.com>
+
+	* gconf/Makefile.am: use top_build instead of build
+	and some beautification.
+
 Wed Aug 02 18:11:37 2000  George Lebl <jirka@5z.com>
 
 	* backends/xml-entry.c (node_set_schema_value) (node_unset_value)
